<resources>
    <string name="app_name">CU-Recycle</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entry_page2">EntryPage2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="home">Home</string>
    <string name="recycling_guidelines">Recycling Guidelines</string>
    <string name="identify">Identify</string>
    <string name="photo">Photo</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="urbana">Urbana</string>
    <string name="champaign">Champaign</string>
    <string name="location">Location</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_food_containers">FoodContainers</string>
    <string name="cu_recycle">
        CU-Recycle
    </string>
    <string name="a">
        Interactive Recycling Assistant\nfor Champaign-Urbana
    </string>
    <string name="manual_inpu">
        Manual Input
</string>
    <string name="take_a_phot">
        Take a Photo
</string>
    <string name="title_activity_search__page">Search Page</string>
    <string name="title_activity_beverage_container">BeverageContainer</string>
    <string name="beverage_containers">Beverage Containers</string>
    <string name="aluminum_cans_clean">- Aluminum cans (clean)</string>
    <string name="aerosol_cans_empty_except_paint_cans">- Aerosol cans (empty), except paint cans!</string>
    <string name="glass_bottles_and_jars_all_colors_accepted">- Glass bottles and jars, all colors accepted</string>
    <string name="beverage_cartons">- Beverage cartons</string>
    <string name="six_pack_ring_carriers">- Six-pack ring carriers</string>
    <string name="title_activity_unacceptable_material">UnacceptableMaterial</string>
    <string name="title_activity_resin_codes">ResinCodes</string>
    <string name="plastic_resin_codes">Plastic Resin Codes</string>
    <string name="_1_pete_polyethylene_terephthalate_soft_drink_water_bottles_or_food_containers"><![CDATA[- 1 PETE (Polyethylene, Terephthalate): Soft drink & water bottles or food containers]]></string>
    <string name="_2_hdpe_high_density_polyethylene_milk_jugs_detergent_bottles_shopping_bags_bundled">- 2 HDPE (High Density Polyethylene): Milk jugs, detergent bottles, shopping bags (bundled)</string>
    <string name="_4_ldpe_low_density_polyethylene_margarine_tubs_lids_frozen_dessert_cups_six_pack_rings_shopping_bags_bundled"><![CDATA[- 4 LDPE (Low Density Polyethylene): Margarine tubs & lids, frozen dessert cups, six-pack rings, shopping bags (bundled)]]></string>
    <string name="_7_other_other_resins_microwaveable_containers_and_narrow_neck_bottles">- 7 OTHER (Other resins): Microwaveable containers and narrow-neck bottles</string>
    <string name="_6_ps_polystyrene_rigid_6_plastics_only_such_as_to_go_coffee_lids_bakery_containers_no_styrofoam">- 6 PS (Polystyrene): Rigid #6 plastics only, such as to-go coffee lids, bakery containers; No Styrofoam</string>
    <string name="_5_pp_polypropylene_yogurt_cups_syrup_bottles_deli_trays_plant_pots_and_caps_lids_plant_pots_must_be_rinsed_free_of_dirt">- 5 PP (Polypropylene): Yogurt cups, syrup bottles, deli trays, plant pots and caps/lids. Plant pots must be rinsed free of dirt.</string>
    <string name="_3_v_polyvinyl_chloride_health_beauty_aide_products_cooking_oil_bottles_and_household_cleaners"><![CDATA[- 3 V (Polyvinyl Chloride): Health & beauty aide products, cooking oil bottles and household cleaners]]></string>
    <string name="title_activity_recycling_procedure">RecyclingProcedure</string>
    <string name="title_activity_residential_paper">ResidentialPaper</string>
    <string name="recycling_procedures">Recycling Procedures</string>
    <string name="any_paper_that_is_written_upon_read_from_or_used_for_packaging_including">Any paper that is written upon, read from, or used for packaging including:</string>
    <string name="ledgers_file_folders_or_computer_paper">- Ledgers, file folders or computer paper</string>
    <string name="shredded_paper_must_be_placed_in_paper_grocery_bag_only_may_staple_bag_to_contain_paper">- Shredded paper (must be placed in paper grocery bag only; may staple bag to contain paper)</string>
    <string name="paperback_hardcover_books_please_limit_to_20_lbs_per_setout"><![CDATA[- Paperback & hardcover books (please limit to 20 lbs. per setout))]]></string>
    <string name="magazines_catalogs_phone_directories">- Magazines, catalogs, phone directories</string>
    <string name="junk_mail">- Junk mail</string>
    <string name="paperboard">- Paperboard</string>
    <string name="cardboard">- Cardboard</string>
    <string name="newspaper_and_inserts">- Newspaper and inserts</string>
    <string name="unacceptable_material">Unacceptable Material</string>
    <string name="no_toys">- No toys</string>
    <string name="no_garbage_bags_keep_materials_loose_in_u_cart">- No garbage bags - keep materials loose in U-Cart</string>
    <string name="no_food_waste_organics">- No food waste/organics</string>
    <string name="no_plastic_film_such_as_ziploc_bags_bread_bags_newspaper_sleeves_wrappers_chip_bags_candy_fast_food_etc">- No plastic film - Such as Ziploc bags, bread bags, newspaper sleeves, wrappers (chip bags, candy, fast food, etc)</string>
    <string name="no_styrofoam_foam_products_such_as_egg_cartons_deli_or_meat_trays_packaging_peanuts">- No Styrofoam (foam) products - Such as egg cartons, deli or meat trays, packaging \'peanuts\'</string>
    <string name="no_scrap_metal_or_wood">- No scrap metal or wood</string>
    <string name="no_single_use_paper_products_paper_towel_tissue_paper_cups_plates">- No single-use paper products (paper towel, tissue paper, cups/plates)</string>
    <string name="no_plastic_cutlery">- No plastic cutlery</string>
    <string name="no_food_soiled_boxes">- No food-soiled boxes</string>
    <string name="no_hazardous_waste_i_e_motor_oil_pesticide_containers_paint_batteries_etc">- No hazardous waste (i.e. motor oil, pesticide containers, paint, batteries, etc)</string>
    <string name="no_ceramics_mirrors">- No ceramics/mirrors</string>
    <string name="no_textiles_shoes">- No textiles/shoes</string>
    <string name="no_medical_waste">- No medical waste</string>
    <string name="no_gift_wrap_ribbon_bows">- No gift wrap/ribbon/bows</string>
    <string name="button">Button</string>
    <string name="glass_bottles_amp_jars_all_colors_accepted_plastic_shopping_bags_grocery_and_retail_only_must_have_a_2_or_4_on_bag_bags_must_be_clean_dry_and_bundled_separately_from_other_recyclables_into_one_retail_bag_no_garbage_bags_accepted"><![CDATA[- Glass bottles & jars, all colors accepted Plastic shopping bags (grocery and retail only; must have a #2 or #4 on bag); Bags must be clean, dry and bundled separately from other recyclables into one retail bag (no garbage bags accepted)]]></string>
    <string name="steel_cans">- Steel cans</string>
    <string name="aluminum_cans_and_foil_clean">- Aluminum cans and foil (clean)</string>
    <string name="food_containers">Food Containers</string>
    <string name="rinse_all_containers">- Rinse all containers</string>
    <string name="cut_large_cardboard_to_less_than_2_x_3">- Cut large cardboard to less than 2\' x 3\'</string>
    <string name="keep_materials_loose_in_the_u_cart_please_don_t_bag_recyclables_in_garbage_bags">- Keep materials loose in the U-Cart (please don\'t bag recyclables in garbage bags)</string>
    <string name="keep_paper_fibers_dry">- Keep paper fibers dry</string>
    <string name="please_take_a_moment_to">Please take a moment to:</string>
    <string name="caps_lids_can_be_recycled_may_be_left_on_bottle_or_container_once_rinsed">- Caps/lids can be recycled, may be left on bottle or container once rinsed</string>
    <string name="flatten_all_boxes">- Flatten all boxes</string>
    <string name="remove_food_box_liners_or_plastic_film">- Remove food box liners or plastic film</string>
    <string name="import1">Import</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="slideshow">Slideshow</string>
    <string name="communicate">Communicate</string>
    <string name="tools">Tools</string>
    <string name="gallery">Gallery</string>
    <string name="special">Special</string>
    <string name="title_activity_local_recycle">LocalRecycle</string>
    <string name="free_recycling_drop_off_centers">Free Recycling Drop-Off Centers</string>
    <string name="illini_recycling">Illini Recycling</string>
    <string name="_420_paul_ave_champaign_il_61824">420 Paul Ave., Champaign, Il. 61824</string>
    <string name="_217_356_0648">(217) 356 0648</string>
    <string name="hours_mon_fri_7_a_m_3_30_p_m_n_sat_7_a_m_12_p_m">Hours: Mon-Fri – 7 a.m. -3:30 p.m.  / Sat – 7 a.m. – 12 p.m.</string>
    <string name="_217_384_2274">(217) 384 2274</string>
    <string name="_921_w_saline_ct_urbana_il_61802">921 W. Saline Ct., Urbana Il. 61802</string>
    <string name="republic_services">Republic Services</string>
    <string name="hours_mon_fri_9_a_m_4_p_m_n">Hours: Mon-Fri – 9 a.m. – 4 p.m.</string>
    <string name="champaign_urbana">Champaign/Urbana</string>
    <string name="food_and_beverage_containers">Food and Beverage Containers</string>
    <string name="recycling_procedure">Recycling Procedure</string>
    <string name="food_and_drink_containers">Food and Drink Containers</string>
    <string name="unacceptable_materials">Unacceptable Materials</string>
    <string name="residential_paper">Residential Paper</string>
    <string name="local_recycling">Local Recycling</string>
</resources>
