<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LocalRecycle"
    tools:showIn="@layout/app_bar_local_recycle">


    <Button
        android:id="@+id/button"
        android:layout_width="325dp"
        android:layout_height="223dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/local"
        android:text="@string/button" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/free_recycling_drop_off_centers"
        android:textAppearance="@android:style/TextAppearance.Material.Large"/>

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/illini_recycling"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/_420_paul_ave_champaign_il_61824" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/_217_356_0648" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/hours_mon_fri_9_a_m_4_p_m_n" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/republic_services"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/_921_w_saline_ct_urbana_il_61802" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/_217_384_2274" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/hours_mon_fri_7_a_m_3_30_p_m_n_sat_7_a_m_12_p_m" />

</LinearLayout>