<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BeverageContainer"
    tools:showIn="@layout/app_bar_beverage_container">

    <Button
        android:id="@+id/button"
        android:layout_width="325dp"
        android:layout_height="223dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/drink" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/beverage_containers"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/aluminum_cans_clean" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/steel_cans" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/aerosol_cans_empty_except_paint_cans" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/glass_bottles_and_jars_all_colors_accepted" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/six_pack_ring_carriers" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/beverage_cartons" />

</LinearLayout>




