<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FoodContainers"
    tools:showIn="@layout/app_bar_food_containers">

    <Button
        android:id="@+id/button"
        android:layout_width="325dp"
        android:layout_height="223dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/food"
        android:text="@string/button" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:gravity="center"
        android:text="@string/food_containers"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="@string/aluminum_cans_and_foil_clean" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="@string/steel_cans" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="@string/glass_bottles_amp_jars_all_colors_accepted_plastic_shopping_bags_grocery_and_retail_only_must_have_a_2_or_4_on_bag_bags_must_be_clean_dry_and_bundled_separately_from_other_recyclables_into_one_retail_bag_no_garbage_bags_accepted" />

</LinearLayout>